# metric-learning

./: .gitmodules  pyproject.toml  setup.sh
examples/: config.yaml  evaluate_rfs.sh  meta_baseline_eval.py  meta_baseline_example.py  params.yaml  rfs_evaluate.py  rfs_example.py  rfs_pretraining.py  run_rfs.sh
metric_learning/: __init__.py  arguments.py  data.py  utils.py
metric_learning/algorithms/: __init__.py  frn.py  maml.py  meta_baseline.py  metric_learner.py  protonet.py  rfs.py  rfs_lightning.py  utils_lightning.py
metric_learning/algorithms/lightning/: __init__.py  metric_module.py
metric_learning/datasets/: vbs3_dataset.py
metric_learning/models/: resnet.py
tests/: test_metric_learning.py
